--- a/app/pages/index/assets/css/a.css
+++ b/app/pages/index/assets/css/a.css
@@ -1,12 +1,7 @@
-h2{
-	color:red;
-	width:50px;
-	height:50px;
-	background:url(../img/image008.jpg);
+body{
+	background:#f0f0f0;
+	overflow-x:hidden;
 }
-h3{
-	color:red;
-	width:50px;
-	height:50px;
-	background:url(/static/img/image008.jpg);
+input:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0px 1000px white inset !important;
 }
